# sani

./: .gitignore  README.md  engine.py  pyproject.toml  requirements.txt
example/: example.go  example.py  example.rb  example.rs  example.sh  example.ts  js.example.js
sani/bot/bots/: __init__.py  base.py  code_bots.py  generic.py
sani/bot/prompt/: __init__.py  backup_templates.py  base.py  generic.py  string_templates.py
sani/cli/: args.py  engine.py
sani/core/: channel.py  config.py  handler.py  ops.py  run.py
sani/debugger/: __init__.py  debugger.py  linter.py  parser.py  script.py
sani/utils/: custom_types.py  exception.py  logger.py
src/sani/: __init__.py  debugger.py
src/sani/bot/: base.py  fix_bot.py  test_bot.py
src/sani/core/: channel.py  config.py  handler.py  ops.py  run.py
src/sani/debugger/: __init__.py  debugger.py  linter.py  parser.py  script.py
src/sani/prompt/: base.py  builder.py  fix_prompt.py  test_prompt.py
src/sani/utils/: custom_types.py  exception.py  utils.py
